--- a/.github/workflows/on-push-to-master.yml
+++ b/.github/workflows/on-push-to-master.yml
@@ -1,4 +1,3 @@
-# Deploy infrastructure on staging environment
 name: on-push-to-master
 concurrency:
   group: on-push-to-master
@@ -31,4 +30,4 @@ jobs:
       env-name: production
     secrets:
       kubernetes-config-base64: ${{ secrets.KUBERNETES_CONFIG_BASE64 }}
-      vars-list: ""
+      vars-list: "TF_VAR_grafana_token=${{ secrets.GRAFANA_TOKEN }}"
