--- a/values.yaml
+++ b/values.yaml
@@ -18,11 +18,16 @@ destinations:
       enabled: false
     traces:
       enabled: true
+  - name: grafana-cloud-profiles
+    type: pyroscope
+    auth:
+      type: basic
 clusterMetrics:
   enabled: true
+  node-exporter:
+    metricsTuning:
+      useIntegrationAllowList: true
 clusterEvents:
-  enabled: true
-nodeLogs:
   enabled: true
 podLogs:
   enabled: true
@@ -42,85 +47,27 @@ applicationObservability:
   connectors:
     grafanaCloudMetrics:
       enabled: true
+autoInstrumentation:
+  enabled: true
+profiling:
+  enabled: true
+integrations:
+  alloy:
+    instances:
+      - name: alloy
+        labelSelectors:
+          app.kubernetes.io/name:
+            - alloy-metrics
+            - alloy-singleton
+            - alloy-logs
+            - alloy-receiver
+            - alloy-profiles
 alloy-metrics:
   enabled: true
-  alloy:
-    extraEnv:
-      - name: GCLOUD_RW_API_KEY
-        valueFrom:
-          secretKeyRef:
-            name: alloy-metrics-remote-cfg-grafana-k8s-monitoring
-            key: password
-      - name: CLUSTER_NAME
-        value: microk8s
-      - name: NAMESPACE
-        valueFrom:
-          fieldRef:
-            fieldPath: metadata.namespace
-      - name: POD_NAME
-        valueFrom:
-          fieldRef:
-            fieldPath: metadata.name
-      - name: GCLOUD_FM_COLLECTOR_ID
-        value: grafana-k8s-monitoring-$(CLUSTER_NAME)-$(NAMESPACE)-$(POD_NAME)
-  remoteConfig:
-    enabled: true
-    auth:
-      type: basic
 alloy-singleton:
   enabled: true
-  alloy:
-    extraEnv:
-      - name: GCLOUD_RW_API_KEY
-        valueFrom:
-          secretKeyRef:
-            name: alloy-singleton-remote-cfg-grafana-k8s-monitoring
-            key: password
-      - name: CLUSTER_NAME
-        value: microk8s
-      - name: NAMESPACE
-        valueFrom:
-          fieldRef:
-            fieldPath: metadata.namespace
-      - name: POD_NAME
-        valueFrom:
-          fieldRef:
-            fieldPath: metadata.name
-      - name: GCLOUD_FM_COLLECTOR_ID
-        value: grafana-k8s-monitoring-$(CLUSTER_NAME)-$(NAMESPACE)-$(POD_NAME)
-  remoteConfig:
-    enabled: true
-    auth:
-      type: basic
 alloy-logs:
   enabled: true
-  alloy:
-    extraEnv:
-      - name: GCLOUD_RW_API_KEY
-        valueFrom:
-          secretKeyRef:
-            name: alloy-logs-remote-cfg-grafana-k8s-monitoring
-            key: password
-      - name: CLUSTER_NAME
-        value: microk8s
-      - name: NAMESPACE
-        valueFrom:
-          fieldRef:
-            fieldPath: metadata.namespace
-      - name: POD_NAME
-        valueFrom:
-          fieldRef:
-            fieldPath: metadata.name
-      - name: NODE_NAME
-        valueFrom:
-          fieldRef:
-            fieldPath: spec.nodeName
-      - name: GCLOUD_FM_COLLECTOR_ID
-        value: grafana-k8s-monitoring-$(CLUSTER_NAME)-$(NAMESPACE)-alloy-logs-$(NODE_NAME)
-  remoteConfig:
-    enabled: true
-    auth:
-      type: basic
 alloy-receiver:
   enabled: true
   alloy:
@@ -137,29 +84,10 @@ alloy-receiver:
         port: 9411
         targetPort: 9411
         protocol: TCP
-    extraEnv:
-      - name: GCLOUD_RW_API_KEY
-        valueFrom:
-          secretKeyRef:
-            name: alloy-receiver-remote-cfg-grafana-k8s-monitoring
-            key: password
-      - name: CLUSTER_NAME
-        value: microk8s
-      - name: NAMESPACE
-        valueFrom:
-          fieldRef:
-            fieldPath: metadata.namespace
-      - name: POD_NAME
-        valueFrom:
-          fieldRef:
-            fieldPath: metadata.name
-      - name: NODE_NAME
-        valueFrom:
-          fieldRef:
-            fieldPath: spec.nodeName
-      - name: GCLOUD_FM_COLLECTOR_ID
-        value: grafana-k8s-monitoring-$(CLUSTER_NAME)-$(NAMESPACE)-alloy-receiver-$(NODE_NAME)
-  remoteConfig:
-    enabled: true
-    auth:
-      type: basic
+alloy-profiles:
+  enabled: true
+nodeLogs:
+  enabled: true
+  journal:
+    # The list of systemd units to keep scraped logs from. If empty, all units are scraped.
+    units: []
