--- a/configs/open-telemetry-collector.yaml
+++ b/configs/open-telemetry-collector.yaml
@@ -3,10 +3,10 @@ receivers:
   otlp:
     protocols:
       grpc:
-        endpoint: "0.0.0.0:4317"
+        endpoint: 0.0.0.0:4317
       http:
         include_metadata: true
-        endpoint: "0.0.0.0:4318"
+        endpoint: 0.0.0.0:4318
 
 processors:
   memory_limiter:
