--- a/.github/workflows/on-push-to-master.yml
+++ b/.github/workflows/on-push-to-master.yml
@@ -30,4 +30,4 @@ jobs:
       env-name: production
     secrets:
       kubernetes-config-base64: ${{ secrets.KUBERNETES_CONFIG_BASE64 }}
-      vars-list: "TF_VAR_grafana_token=${{ secrets.GRAFANA_TOKEN }}"
+      vars-list: "TF_VAR_grafana_token=${{ secrets.GRAFANA_TOKEN }},TF_VAR_grafana_instance_id=${{ secrets.GRAFANA_INSTANCE_ID }},TF_VAR_grafana_endpoint=${{ secrets.GRAFANA_ENDPOINT }}"
