--- a/configs/open-telemetry-collector.yaml
+++ b/configs/open-telemetry-collector.yaml
@@ -1,84 +1,147 @@
 # https://grafana.com/docs/grafana-cloud/monitor-applications/application-observability/collector/opentelemetry-collector/
+# https://opentelemetry.io/docs/collector/configuration/
+# Tested with OpenTelemetry Collector Contrib v0.98.0
 receivers:
   otlp:
     protocols:
       grpc:
         endpoint: 0.0.0.0:4317
       http:
-        include_metadata: true
         endpoint: 0.0.0.0:4318
-
-  prometheus/collector:
-    config:
-      scrape_configs:
-        - job_name: "opentelemetry-collector"
-          scrape_interval: 10s
-          static_configs:
-            - targets: [ ":8888" ]
-
-  host_metric:
-    collection_interval: 10s
+  hostmetrics:
+    # Optional. Host Metrics Receiver added as an example of Infra Monitoring capabilities of the OpenTelemetry Collector
+    # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/receiver/hostmetricsreceiver
     scrapers:
-      cpu:
-      memory:
       load:
-      network:
+      memory:
 
 processors:
-  memory_limiter:
-    check_interval: 1s
-    limit_percentage: 75
-    spike_limit_percentage: 15
   batch:
-    send_batch_size: 10000
-    timeout: 10s
+  # https://github.com/open-telemetry/opentelemetry-collector/tree/main/processor/batchprocessor
+  resourcedetection:
+    # Enriches telemetry data with resource information from the host
+    # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/processor/resourcedetectionprocessor
+    detectors: ["env", "system"]
+    override: false
+  transform/drop_unneeded_resource_attributes:
+    # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/processor/transformprocessor
+    error_mode: ignore
+    trace_statements:
+      - context: resource
+        statements:
+          - delete_key(attributes, "k8s.pod.start_time")
+          - delete_key(attributes, "os.description")
+          - delete_key(attributes, "os.type")
+          - delete_key(attributes, "process.command_args")
+          - delete_key(attributes, "process.executable.path")
+          - delete_key(attributes, "process.pid")
+          - delete_key(attributes, "process.runtime.description")
+          - delete_key(attributes, "process.runtime.name")
+          - delete_key(attributes, "process.runtime.version")
+    metric_statements:
+      - context: resource
+        statements:
+          - delete_key(attributes, "k8s.pod.start_time")
+          - delete_key(attributes, "os.description")
+          - delete_key(attributes, "os.type")
+          - delete_key(attributes, "process.command_args")
+          - delete_key(attributes, "process.executable.path")
+          - delete_key(attributes, "process.pid")
+          - delete_key(attributes, "process.runtime.description")
+          - delete_key(attributes, "process.runtime.name")
+          - delete_key(attributes, "process.runtime.version")
+    log_statements:
+      - context: resource
+        statements:
+          - delete_key(attributes, "k8s.pod.start_time")
+          - delete_key(attributes, "os.description")
+          - delete_key(attributes, "os.type")
+          - delete_key(attributes, "process.command_args")
+          - delete_key(attributes, "process.executable.path")
+          - delete_key(attributes, "process.pid")
+          - delete_key(attributes, "process.runtime.description")
+          - delete_key(attributes, "process.runtime.name")
+          - delete_key(attributes, "process.runtime.version")
+  transform/add_resource_attributes_as_metric_attributes:
+    # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/processor/transformprocessor
+    error_mode: ignore
+    metric_statements:
+      - context: datapoint
+        statements:
+          - set(attributes["deployment.environment"], resource.attributes["deployment.environment"])
+          - set(attributes["service.version"], resource.attributes["service.version"])
+
+  k8sattributes:
+    extract:
+      # The attributes provided in 'metadata' will be added to associated resources
+      metadata:
+        - k8s.namespace.name
+        - k8s.pod.name
+        - k8s.deployment.name
+        - k8s.statefulset.name
+        - k8s.daemonset.name
+        - k8s.cronjob.name
+        - k8s.job.name
+        - k8s.node.name
+        - k8s.pod.uid
+        - k8s.pod.start_time
+    pod_association:
+      - sources:
+          # This rule will use the IP from the incoming connection from which the resource is received, and find the matching pod, based on the 'pod.status.podIP' of the observed pods
+          - from: connection
 
 exporters:
-  otlphttp/grafana:
-    endpoint: https://logs-prod-012.grafana.net/otlp
-    headers:
-      Authorization: "Bearer ${GRAFANA_CLOUD_API_KEY}"
+  otlphttp/grafana_cloud:
+    # https://github.com/open-telemetry/opentelemetry-collector/tree/main/exporter/otlphttpexporter
+    endpoint: "${env:GRAFANA_CLOUD_OTLP_ENDPOINT}"
+    auth:
+      authenticator: basicauth/grafana_cloud
+
+extensions:
+  basicauth/grafana_cloud:
+    # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/extension/basicauthextension
+    client_auth:
+      username: "${env:GRAFANA_CLOUD_INSTANCE_ID}"
+      password: "${env:GRAFANA_CLOUD_API_KEY}"
+
+connectors:
+  grafanacloud:
+    # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/connector/grafanacloudconnector
+    host_identifiers: ["k8s.node.name"]
 
 service:
   extensions:
-    - health_check
+    [
+      basicauth/grafana_cloud,
+    ]
   pipelines:
     traces:
-      receivers:
-        - otlp
+      receivers: [otlp]
       processors:
-        - memory_limiter
-        - batch
-      exporters:
-        - otlphttp/grafana
+        [resourcedetection, k8sattributes, transform/drop_unneeded_resource_attributes, batch]
+      exporters: [otlphttp/grafana_cloud, grafanacloud]
     metrics:
-      receivers:
-        - otlp
+      receivers: [otlp, hostmetrics]
       processors:
-        - memory_limiter
-        - batch
-      exporters:
-        - otlphttp/grafana
+        [
+          resourcedetection,
+          k8sattributes,
+          transform/drop_unneeded_resource_attributes,
+          transform/add_resource_attributes_as_metric_attributes,
+          batch,
+        ]
+      exporters: [otlphttp/grafana_cloud]
+    metrics/grafanacloud:
+      receivers: [grafanacloud]
+      processors: [batch]
+      exporters: [otlphttp/grafana_cloud]
     logs:
-      receivers:
-        - otlp
+      receivers: [otlp]
       processors:
-        - memory_limiter
-        - batch
-      exporters:
-        - otlphttp/grafana
-    metrics/collector:
-      receivers:
-        - prometheus/collector
-        - host_metric
-      processors:
-        - memory_limiter
-        - batch
-      exporters:
-        - otlphttp/grafana
-
-  telemetry:
-    metrics:
-      address: 0.0.0.0:8888
-    logs:
-      level: info
+        [
+          resourcedetection,
+          k8sattributes,
+          transform/drop_unneeded_resource_attributes,
+          batch,
+        ]
+      exporters: [otlphttp/grafana_cloud]
