--- a/configs/open-telemetry-collector.yaml
+++ b/configs/open-telemetry-collector.yaml
@@ -17,6 +17,8 @@ receivers:
 
 processors:
   batch:
+    send_batch_size: 10000
+    timeout: 10s
   # https://github.com/open-telemetry/opentelemetry-collector/tree/main/processor/batchprocessor
   resourcedetection:
     # Enriches telemetry data with resource information from the host
