--- a/configs/open-telemetry-collector.yaml
+++ b/configs/open-telemetry-collector.yaml
@@ -11,9 +11,12 @@ receivers:
   hostmetrics:
     # Optional. Host Metrics Receiver added as an example of Infra Monitoring capabilities of the OpenTelemetry Collector
     # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/receiver/hostmetricsreceiver
+    collection_interval: 10s
     scrapers:
-      load:
+      cpu:
       memory:
+      load:
+      network:
 
 processors:
   batch:
