--- a/.github/workflows/on-push-to-master.yml
+++ b/.github/workflows/on-push-to-master.yml
@@ -24,10 +24,9 @@ jobs:
       - run: terraform validate
   deploy:
     needs: validate-tf
-    uses: davidleonm/cicd-pipelines/.github/workflows/deploy-infrastructure.yml@master
+    uses: davidleonm/cicd-pipelines/.github/actions/deploy-infrastructure
     with:
       terraform-version: ~1.10.0
       env-name: production
-    secrets:
       kubernetes-config-base64: ${{ secrets.KUBERNETES_CONFIG_BASE64 }}
       vars-list: "TF_VAR_grafana_token=${{ secrets.GRAFANA_TOKEN }},TF_VAR_grafana_instance_id=${{ secrets.GRAFANA_INSTANCE_ID }},TF_VAR_grafana_endpoint=${{ secrets.GRAFANA_ENDPOINT }}"
