--- a/.github/workflows/on-dispatch-unlock.yml
+++ b/.github/workflows/on-dispatch-unlock.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   unlock-state:
-    uses: davidleonm/cicd-pipelines/.github/actions/unlock-state
+    uses: davidleonm/cicd-pipelines/.github/actions/unlock-state@master
     with:
       terraform-version: ~1.10.0
       env-name: production
