--- a/.github/workflows/on-dispatch.yml
+++ b/.github/workflows/on-dispatch.yml
@@ -12,7 +12,7 @@ on:
         required: true
 jobs:
   destroy-infrastructure:
-    uses: davidleonm/cicd-pipelines/.github/actions/deploy-infrastructure
+    uses: davidleonm/cicd-pipelines/.github/actions/deploy-infrastructure@master
     with:
       terraform-version: ~1.10.0
       env-name: production
