--- a/.github/workflows/on-dispatch.yml
+++ b/.github/workflows/on-dispatch.yml
@@ -12,10 +12,11 @@ on:
         required: true
 jobs:
   destroy-infrastructure:
-    uses: davidleonm/cicd-pipelines/actions/deploy-infrastructure@master
+    uses: davidleonm/cicd-pipelines/.github/workflows/deploy-infrastructure.yml@master
     with:
       terraform-version: ~1.10.0
       env-name: production
       destroy-environment: ${{ inputs.destroy-environment }}
+    secrets:
       kubernetes-config-base64: ${{ secrets.KUBERNETES_CONFIG_BASE64 }}
       vars-list: "TF_VAR_grafana_token=${{ secrets.GRAFANA_TOKEN }},TF_VAR_grafana_instance_id=${{ secrets.GRAFANA_INSTANCE_ID }},TF_VAR_grafana_endpoint=${{ secrets.GRAFANA_ENDPOINT }}"
