--- a/configs/open-telemetry-collector.yaml
+++ b/configs/open-telemetry-collector.yaml
@@ -27,6 +27,12 @@ processors:
       - context: resource
         statements:
           - delete_key(attributes, "k8s.pod.start_time")
+          - delete_key(attributes, "k8s.namespace.name")
+          - delete_key(attributes, "k8s.node.name")
+          - delete_key(attributes, "k8s.pod.ip")
+          - delete_key(attributes, "k8s.pod.name")
+          - delete_key(attributes, "k8s.pod.uid")
+          - delete_key(attributes, "k8s.statefulset.name")
           - delete_key(attributes, "os.description")
           - delete_key(attributes, "os.type")
           - delete_key(attributes, "process.command_args")
@@ -39,6 +45,12 @@ processors:
       - context: resource
         statements:
           - delete_key(attributes, "k8s.pod.start_time")
+          - delete_key(attributes, "k8s.namespace.name")
+          - delete_key(attributes, "k8s.node.name")
+          - delete_key(attributes, "k8s.pod.ip")
+          - delete_key(attributes, "k8s.pod.name")
+          - delete_key(attributes, "k8s.pod.uid")
+          - delete_key(attributes, "k8s.statefulset.name")
           - delete_key(attributes, "os.description")
           - delete_key(attributes, "os.type")
           - delete_key(attributes, "process.command_args")
@@ -51,6 +63,12 @@ processors:
       - context: resource
         statements:
           - delete_key(attributes, "k8s.pod.start_time")
+          - delete_key(attributes, "k8s.namespace.name")
+          - delete_key(attributes, "k8s.node.name")
+          - delete_key(attributes, "k8s.pod.ip")
+          - delete_key(attributes, "k8s.pod.name")
+          - delete_key(attributes, "k8s.pod.uid")
+          - delete_key(attributes, "k8s.statefulset.name")
           - delete_key(attributes, "os.description")
           - delete_key(attributes, "os.type")
           - delete_key(attributes, "process.command_args")
