--- a/configs/open-telemetry-collector.yaml
+++ b/configs/open-telemetry-collector.yaml
@@ -82,9 +82,9 @@ processors:
     # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/processor/transformprocessor
     error_mode: ignore
     log_statements:
-      - context: resource
+      - context: log
         statements:
-          - set(attributes["severity_text"], ToUpperCase(attributes["severity_text"]))
+          - set(log.severity_text, ToUpperCase(log.severity_text))
 
   transform/add_resource_attributes_as_metric_attributes:
     # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/processor/transformprocessor
